# rag-tag

./: .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  command_r_agent.py  config.example.yaml  config.yaml  docker-compose.neo4j.yml  ifc_graph_tool.py  ifc_sql_tool.py  main.py  pyproject.toml  query_router.py  run_agent.py
.agents/skills/ifcopenshell-python/: SKILL.md
.agents/skills/pydantic-ai/: SKILL.md
.github/workflows/: ci.yml  security.yml
evals/: benchmark_cases_v1.yaml  benchmark_cases_v2.yaml
output/: Building-Architecture.csv  Building-Architecture.db  Building-Structural.csv  Building-Structural.db
parser/: README.md  csv_to_graph.py  csv_to_sql.py  ifc-to-csv.py  ifc_geometry_parse.py  ifc_to_csv.py
router/: __init__.py  llm.py  router.py  rules.py
scripts/: check_batch4.py  check_batch5.py  check_batch6.py  check_graph_contract.py  check_graph_relationships.py  check_payload_mode_parity.py  eval_benchmarks.py  eval_graph_models.py  eval_overlap_modes.py  eval_routing.py  generate_ontology_map.py  refresh_bsdd_ifc43_rdf.py  run_eureka.sh  run_neo4j_workflow.sh
src/rag_tag/: __init__.py  __main__.py  command_r_agent.py  config.py  graph_contract.py  ifc_class_taxonomy.py  ifc_graph_tool.py  ifc_neo4j_tool.py  ifc_sql_tool.py  level_normalization.py  observability.py  paths.py  query_presentation.py  query_service.py  run_agent.py  sql_element_lookup.py  text_matching.py  textual_app.py  trace.py  tui.py  usage.py
src/rag_tag/agent/: __init__.py  graph_agent.py  graph_tools.py  langgraph_agent.py  langgraph_nodes.py  langgraph_state.py  models.py
src/rag_tag/cli/: __init__.py  generate_ontology_map.py  refresh_bsdd_ifc43_rdf.py
src/rag_tag/evals/: __init__.py  benchmark.py  dataset.py  evaluators.py  metrics.py  reporting.py  runner.py  runtime.py  strategies.py  task_runner.py
src/rag_tag/graph/: __init__.py  catalog.py  payloads.py  properties.py  runtime.py  spatial_reasoning.py  types.py
src/rag_tag/llm/: __init__.py  models.py  provider_registry.py  pydantic_ai.py
src/rag_tag/parser/: README.md  __init__.py  csv_to_graph.py  (+15 more)
tests/: test_batch34_graph_semantics.py  test_batch34_query_reliability.py  test_ci_smoke_parity.py  test_config.py  test_eval_benchmark_batch8.py  test_eval_benchmark_cli.py  test_eval_dataset.py  test_eval_graph_models.py  test_eval_metrics.py  test_eval_overlap_modes.py  test_eval_reporting.py  test_eval_runner.py  test_eval_strategies.py  test_eval_task_runner.py  test_graph_agent_formatting.py  test_graph_agent_output_recovery.py  test_graph_answer_normalization.py  test_graph_batch1_bounded_outputs.py  test_graph_batch2_macro_tools.py  test_graph_batch3_sql_bridge_tools.py  test_graph_properties.py  test_graph_runtime_seam.py  test_graph_token_usage.py  test_graph_tool_container_exclusion.py  test_graph_tool_search_bias.py  test_graph_tools_container_exclusion.py  test_graph_viewer_assets.py  test_ifc_to_jsonl.py  test_langgraph_agent.py  test_langgraph_state.py  test_multi_dataset_graph.py  test_neo4j_backend_unit.py  test_neo4j_import_smoke.py  test_neo4j_parity.py  test_pydantic_ai_databricks.py  test_query_presentation.py  test_router_runtime_overrides.py  test_routing_rules.py  test_run_agent.py  test_spatial_clearance_index.py  (+8 more)
viewer_frontend/: package-lock.json  package.json
viewer_frontend/scripts/: build-model.mjs
viewer_frontend/src/: model-app.js
(+31 files in other folders)
