[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_tag"]

[tool.hatch.build.targets.editable]
packages = ["src/rag_tag"]

[project]
name = "rag-tag"
version = "0.1.0"
description = "Natural-language querying over IFC models using hybrid retrieval"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cohere>=5.20.4",
    "google-genai>=1.3.0",
    "ifcopenshell>=0.8.4.post1",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pydantic>=2.7.0",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.1",
    "pydantic-ai-slim[google,cohere]>=0.0.1",
    "rapidfuzz>=3.0.0",
    "logfire>=2.0.0",
    "textual>=1.0.0",
    "rdflib>=7.0.0",
]

[project.scripts]
rag-tag = "rag_tag.run_agent:main"
rag-tag-ifc-to-jsonl = "rag_tag.parser.ifc_to_jsonl:main"
rag-tag-jsonl-to-sql = "rag_tag.parser.jsonl_to_sql:main"
rag-tag-jsonl-to-graph = "rag_tag.parser.jsonl_to_graph:main"
rag-tag-generate-ontology-map = "scripts.generate_ontology_map:main"
rag-tag-refresh-ifc43-rdf = "scripts.refresh_bsdd_ifc43_rdf:main"

[dependency-groups]
dev = [
    "pre-commit>=3.7",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
line-ending = "lf"
